# ai-research-model-cards

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  METHODOLOGY.md  Makefile  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/api/v1/: admin.py  deploy.py  documents.py  evals.py  export.py  families.py  intersection.py  labs.py  probes.py  responses.py  slant.py
apps/api/src/core/: config.py  deps.py
apps/api/src/schemas/: analysis.py  document.py  eval.py  labs.py  probe.py
apps/api/tests/: conftest.py  test_benchmark_policy_note.py  test_divergence_schemas.py  test_labs_schemas.py  test_reproducibility_flags.py
apps/collector/: Dockerfile  pyproject.toml
apps/collector/src/collectors/: base.py  fetch.py  registry.py  wayback.py
apps/collector/src/pipeline/: store.py
apps/collector/src/scheduler/: jobs.py  runner.py
apps/collector/tests/: test_size_cap.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  (+4 more)
apps/worker/: Dockerfile  Dockerfile.light  pyproject.toml
apps/worker/src/: main.py
apps/worker/src/analyzer/: slant.py
apps/worker/src/embedder/: model.py  pipeline.py
apps/worker/src/extractor/: claude_cli.py  eval_extractor.py  external_ingester.py  parse.py  variant_parser.py
apps/worker/src/tasks/: probe_runner.py
apps/worker/tests/: conftest.py  test_eval_extractor.py  test_parse_extraction_json.py  test_variant_parser.py
apps/worker/tests/fixtures/: deepseek_v3_missing_wrapper.txt  llama3_unclosed_fence.txt
charts/: README.md  build_article_charts.py  build_article_data.py  build_jh.py  build_scorecard.py  build_v.py  generate.py  generate_card_mockup.py  grep_card_text.py  release_dates.csv
claims/: audit_precision.md  findings.md  human_validation.md  system_audit.md
docs/: RUNBOOK.md
external_validation/: 00_CROSS_CHECK_SUMMARY.md  01_swebench.md  02_mmlu.md  03_humaneval.md  04_gaia.md  05_livecodebench.md  06_artificial_analysis.md  07_chatbot_arena.md  08_vals_ai.md  09_helm.md  10_verifications.md  11_aime_math.md  12_gpqa.md  13_tau_bench.md  14_arc_agi_hle.md  15_vellum_aggregate.md
improv/: updates.md
scripts/: analyze_benchmark_overlap.py  analyze_safety_benchmarks.py  apply_migration_0010.py  backfill_railway.py  backfill_v2.py  backfill_variant_fields.py  build_lifecycle_viz.py  dev_setup.sh  extract_evals.py  extract_local.py  extract_one.py  extract_window.py  generate_pdf.py  generate_summaries.py  industry_mapping.sql  industry_mapping_report.md  ingest_one.py  ingest_one_local.py  migrate.sh  new_sources.py  seed_db.py  trigger_probe.py
(+73 files in other folders)
