[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-policy-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ai-policy-db",
    "sentence-transformers>=2.7.0",
    "torch>=2.2.0",
    "redis>=5.0.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pymannkendall>=1.4.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
